Fixed: Truncate custom format card tags
Fixes #7725
Fixes #7973

--- a/frontend/src/Settings/CustomFormats/CustomFormats/CustomFormat.css
+++ b/frontend/src/Settings/CustomFormats/CustomFormats/CustomFormat.css
@@ -17,6 +17,10 @@
   font-size: 24px;
 }
 
+.buttons {
+  flex: 0 0 auto;
+}
+
 .cloneButton {
   composes: button from '~Components/Link/IconButton.css';
 
@@ -35,4 +39,11 @@
 
   margin: 0;
   border: none;
+}
+
+.label {
+  @add-mixin truncate;
+  composes: label from '~Components/Label.css';
+
+  max-width: 100%;
 }
